--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sebastian Nogueyra</title>
+  <title>Home Intro | Sebastian Nogueyra</title>
 </head>
 <body>
   <header>
@@ -15,11 +15,16 @@
       </ul>
     </nav>
     <hgroup>
-      <h1>Sebastian Nogueyra</h1>
-      <p>Curriculum Vitae</p>
+      <h1>Curriculum Vitae</h1>
+      <h2>Sebastian Nogueyra</h2>
     </hgroup>
   </header>
   <main>
+    <img srcset="images/1_SN_CL600x624.jpg,
+                 images/1_SN_CL800x832.jpg 2x, 
+                 images/1_SN_CL1866x1940.jpg 3x"
+      src="images/1_SN_CL600x624.jpg" 
+      alt="Sebas at the office">
     <h2>About me</h2>
     <p>Hello,</p>
 
@@ -41,7 +46,7 @@
     <p>Regards</p>
   </main>
   <footer>
-    <p>&reg; SebasNogueyra.inc</p>
+    <p>2025 by&reg; SebasNogueyra.inc</p>
   </footer>
 </body>
 </html>
