--- a/contact.html
+++ b/contact.html
@@ -24,12 +24,16 @@
   </main>
   <ul>
     <h2>Send email to:</h2>
-    <li><a href="mailto:sebasnogueyra@yahoo.co.uk">sebasnogueyra@yahoo.co.uk</a></li>
+    <li><a href="mailto:sebasnogueyra@yahoo.co.uk"target="_blank">sebasnogueyra@yahoo.co.uk</a></li>
     <h2>Call Telephone/Whatsapp:</h2>
-    <li><a href="tel:+5491131858026">+54 (011) 31858026</a></li>
+    <li><a href="tel:+5491131858026"target="_blank">+54 (011) 31858026</a></li>
     <h2>Alternative send me a message at:</h2>
-    <li><a href="https://www.linkedin.com/in/sebastian-nogueyra-39783a370/">LinkedIn</a></li>
-    <li><a href="https://www.facebook.com/sebastian.nogueyra/">Facebook</a></li>  
+    <li><a href="https://www.linkedin.com/in/sebastian-nogueyra-39783a370/"target="_blank">LinkedIn</a></li>
+    <li><a href="https://www.facebook.com/sebastian.nogueyra/"target="_blank">Facebook</a></li>  
+    <li>
+      <p>Map</p>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d68380.56569582106!2d-71.65694948751356!3d-40.761527514503086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sar!4v1754076830065!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </li>
   </ul>
     <footer>
     <p>2025 by&reg; SebasNogueyra.inc</p>
