--- a/index.html
+++ b/index.html
@@ -1,52 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home Intro | Sebastian Nogueyra</title>
-</head>
-<body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="cv.html">Curriculum Vitae</a></li>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sebas Nogueyra, IT architect</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <!-- Changing fonts with comments -->
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
+  <body class="home">
+    <!-- //  INTRO  // -->
+    <div class="content-wrapper">
+      <div class="content-bg">
+        <header>
+          <!-- Start content edits below this line. -->
+          <h1>Sebastian Nogueyra</h1>
+          <h2>IT architect + Global Outage Manager</h2>
+
+          <!-- End content edits here. -->
+        </header>
+
+        <!-- //  ABOUT ME  // -->
+        <main>
+          <p>With over 15 years of experience in the tech industry, I've had the opportunity to work on diverse projects, including managing database services for a global pharmaceutical company, leading incident response for global outages at a professional networking platform, and deploying new solutions for a major American financial services firm. In addition to my technical expertise, I've also explored creative pursuits, designing innovative operating system interfaces that have earned me a <a href="https://patents.google.com/patent/US20180253583A1/en" target="_blank">patent recognition</a>.</p>
+
+          <p>To learn more about my work history, check out my <a href="resume.html"> resume</a>. Thanks for stopping by!</p>
+        </main>
+      </div>
+    </div>
+    <!-- //  FOOTER INFO, SOCIAL MEDIA  // -->
+    <footer>
+      <p>© 2025 by Sebas Nogueyra |  <a href="mailto:sebasnogueyra@yahoo.co.uk">sebasnogueyra@yahoo.co.uk</a></p>
+
+      <ul class="socials">
+        <li>
+          <!-- // hyper-link for Sebas at twitter -->
+          <a href="https://x.com/snogueyra" 
+          target="_blank"><img src="images/icon-logo-twitter.png" target=”_blank” alt="Twitter Link"></a>
+        </li>
+        <li>
+          <!-- // hyper-link for Sebas at LinkedIN -->
+          <a href="https://www.linkedin.com/in/sebastian-nogueyra-39783a370/" target="_blank"><img src="images/icon-logo-linkedin.png" target=”_blank” alt="LinkedIn Link"></a>
+        </li>
+        <li>
+          <!-- // hyper-link for Sebas at Facebook -->
+          <a href="https://www.facebook.com/sebastian.nogueyra/" target="_blank"><img src="images/icon-logo-facebook.png" target=”_blank” alt="Facebook Link"></a>
+        </li> 
+        <li>
+          <!-- // hyper-link for Sebas at Instagram -->
+          <a href="https://www.instagram.com/sebas_nogueyra/" 
+          target="_blank"><img src="images/icon-logo-instagram.png" target=”_blank” alt="Instagram Link"></a>
+        </li> 
       </ul>
-    </nav>
-    <hgroup>
-      <h1>Curriculum Vitae</h1>
-      <h2>Sebastian Nogueyra</h2>
-    </hgroup>
-  </header>
-  <main>
-    <img srcset="images/1_SN_CL600x624.jpg,
-                 images/1_SN_CL800x832.jpg 2x, 
-                 images/1_SN_CL1866x1940.jpg 3x"
-      src="images/1_SN_CL600x624.jpg" 
-      alt="Sebas at the office">
-    <h2>About me</h2>
-    <p>Hello,</p>
-
-    <p>I hope you're having a good day. My extensive experience, over 10 years at a successful global IT company, has equipped me with a strong skillset and a commitment to excellence that I believe would align well with opportunities at your company.</p>
-
-    <p>Over the course of my career, I have developed a strong set of technical and interpersonal skills through targeted training and real-world experience. In my role as Global Outage Manager, these skills were critical for orchestrating cross-functional incident response efforts—engaging infrastructure, application, and network teams to perform rapid root cause analysis, formulate and execute remediation plans, and ensure minimal service disruption through the efficient resolution of high-priority incidents.</p>
-
-    <p>I've always enjoyed working in a team environment, and I genuinely believe that my strongest skills have naturally matured through collaboration with inspiring leaders and mentors. Early in my career, while providing technical support for clients in the UK and across Europe, I was often involved in technical incidents that reached me through the escalation process. I welcomed those challenges, as they required close collaboration with highly specialized engineers. While many colleagues relied on email or phone to gather additional information and advice, I used to walk over to the relevant departments to present and discuss cases face-to-face with the experts. This hands-on method not only led to quicker resolutions of critical incidents but also helped me build valuable professional relationships and long-lasting friendships.</p>
-
-    <p>Later, as a Senior Delivery Manager, the account Delivery Project Executive asked how I could effortlessly navigate contractual discussions with our Swiss and US counterparts. I recall being puzzled by the question— I hadn't seen it as a challenge—. Despite their different accents, and points of view, I always found our talks pleasant and constructive. Efficient negotiations and swift agreements streamlined our process, freeing up resources for service improvement initiatives. That year, working together with local managers, we exceeded expectations by hitting our annual cost reduction targets by the third quarter and successfully deploying a comprehensive DB backup and recovery upgrade across all sites and data- centers by year-end.</p>
-
-    <p>In a similar manner, my broad technical expertise wasn't just built in classrooms; it matured through practical application. Though I pursued formal education and earned industry certifications, my most valuable skills were developed through hands-on experience—resolving day-to-day client needs,
-    ollaborating with subject matter experts, designing solutions, creating workarounds, and leading the resolution of critical global incidents.</p>
-
-    <p>While I value my role as a Global Outage Manager, recurring incident patterns and operational inefficiencies have driven me to actively contribute to DevOps and Site Reliability Engineering (SRE) initiatives. I believe these approaches represent the natural path forward, enabling agile development and deployment without compromising system availability or operational excellence.</p>
-
-    <p>On a personal note, I spent many years in a large metropolitan city, traveling frequently to onboard new clients. Identifying key players and strategically capturing account specific and critical knowledge. While I've since settled in a small village, my work and lasting friendships ensure I remain connected with people all around the world. I've even build a highly reliable office in my backyard! When I'm not working, you'll find me leading trekking groups in the national park, kayaking, or fly-casting. I appreciate your time and consideration. Please don't hesitate to reach out if you require any additional information.</p>
-
-    <p>Regards</p>
-  </main>
-  <footer>
-    <p>2025 by&reg; SebasNogueyra.inc</p>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
