added correct PeopleCert validation
PeopleCert validation Url updated

--- a/resume.html
+++ b/resume.html
@@ -314,7 +314,7 @@
             <p> ITIL 4 certification is a globally recognized framework for IT service management (ITSM). It provides a structured approach to managing IT services, aligning them with business needs and improving overall organizational efficiency by introducing an end-to-end operating model for the creation, delivery and continual improvement of technology-enabled products and services.</p>
             <p>Certificate Number: GR671772246SN</p>
             <p>Candidate Number: 9980027530372287</p>
-            <a class="btn" href="https://www.peoplecert.org/public-profile?ed=XCHu3ZqUTNLbKN5LpnTWxiKSytEtS06U" target="_blank">Peoplecert Validation</a>
+            <a class="btn" href="https://www.peoplecert.org/en/for-corporations/certificate-verification-service/" target="_blank">Peoplecert Validation</a>
           </section>
         </div>
       </section>
